--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -1,8 +1,8 @@
-\newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
-\newcommand\Gl[1]{\mathsf{gl}_{#1}}
-\newcommand\GL[1]{\boldsymbol{\mathcal{G}} _{#1}}
-\newcommand\TOP[1]{\mathbf{Top}_{E}}
-\newcommand\Sh[1]{\boldsymbol{\mathcal{S}} _{#1}}
+\newcommand\Cod[1]{\mathsf{#1}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
-\newcommand\Cod[1]{\mathsf{cod}_{#1}}
+\newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
+\newcommand\Gl[1]{\mathsf{gl}_{#1}}
+\newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
 \newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
+\newcommand\Sh[1]{\boldsymbol{\mathcal{S}}_{#1}}
+\newcommand\TOP[1]{\mathbf{Top}_{#1}}
