--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -1,8 +1,15 @@
-\newcommand\Cod[1]{\mathsf{#1}_{#1}}
+\newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
 \newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
 \newcommand\Gl[1]{\mathsf{gl}_{#1}}
+\newcommand\Idn[1]{1_{#1}}
+\newcommand\InvImg[1]{#1^{*}}
 \newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
 \newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
+\newcommand\SelfIx[1]{\underline{#1}}
 \newcommand\Sh[1]{\boldsymbol{\mathcal{S}}_{#1}}
+\newcommand\Sl[2]{#1_{/#2}}
+\newcommand\Sub[1]{_{#1}}
+\newcommand\Sup[1]{^{#1}}
 \newcommand\TOP[1]{\mathbf{Top}_{#1}}
+\newcommand\TotCat[1]{\widetilde{#1}}
