--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -1,11 +1,14 @@
+\newcommand\CandHom[3]{\mathbf{H}_{#1}(#2,#3)}
 \newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
+\newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
 \newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
 \newcommand\Gl[1]{\mathsf{gl}_{#1}}
 \newcommand\Idn[1]{1_{#1}}
 \newcommand\InvImg[1]{#1^{*}}
 \newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
 \newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
+\newcommand\SET{\mathbf{Set}}
 \newcommand\SelfIx[1]{\underline{#1}}
 \newcommand\Sh[1]{\boldsymbol{\mathcal{S}}_{#1}}
 \newcommand\Sl[2]{#1_{/#2}}
