--- a/_nodes/0001.md
+++ b/_nodes/0001.md
@@ -34,6 +34,6 @@ this unique factorization of $\bar{h}$ through $\bar{f}$ over $m$ as follows:
 »
 
 Above we have used the "pullback corner" to indicate $\bar{x}\to\bar{y}$ as a
-cartesian map. We return to this in our discussion of the self-indexing {%ref T00A3 %}
+cartesian map. We return to this in our discussion of the self-indexing {%ref 0003 %}
 of a category.
 
