add an explanation.

--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -16,3 +16,4 @@
 \newcommand\Sup[1]{^{#1}}
 \newcommand\TOP[1]{\mathbf{Top}_{#1}}
 \newcommand\TotCat[1]{\widetilde{#1}}
+\newcommand\brc[1]{\{ #1 \}}
