--- a/_nodes/000J.md
+++ b/_nodes/000J.md
@@ -14,3 +14,5 @@ smallness* by Jacobs and factors through an important concept: the *generic obje
 **Definition.** An ordinary category is called *globally small* when it has a set of objects.
 
 {%import 000K%}
+
+{%import 000P%}
