--- a/_nodes/000M.md
+++ b/_nodes/000M.md
@@ -13,7 +13,7 @@ define a morphism $x\to y\in U$ to be given by the following data:
 2. a cartesian map $b\to\Sub{y} \bar{u}$ over $y : 1\to U$,
 3. and a vertical map $h:a\to b$ in $\FAM{C}[1]\simeq C$,
 
-such that $(a\Sub{1},b\Sub{1},h\Sub{1})$ is identified with $(a\Sub{2},b\Sub{2},h\Sub{2})$ when $h_1$ and $h_2$ are equal modulo the (unique) isomorphisms between the cartesian lifts in the sense depicted below:
+such that $(a\Sub{1},b\Sub{1},h\Sub{1})$ is identified with $(a\Sub{2},b\Sub{2},h\Sub{2})$ when $h_1$ and $h_2$ are equal modulo the (unique) vertical isomorphisms between the cartesian lifts in the sense depicted below:
 «
 \begin{tikzpicture}[diagram]
   \SpliceDiagramSquare{
