opposite categories (close #1); clean up discussion of class-quotients

--- a/_nodes/0008.md
+++ b/_nodes/0008.md
@@ -10,6 +10,7 @@ macrolib: topos
 {% import 0003 %}
 {% import 0004 %}
 {% import 0005 %}
+{% import 000Q %}
 {% import 0006 %}
 {% import 0007 %}
 
