--- a/_nodes/000L.md
+++ b/_nodes/000L.md
@@ -27,10 +27,36 @@ consider the cartesian map displayed over $z : I \to C$:
 
 Conversely assume that $\FAM{C}$ has a generic object $\bar{u}\in\FAM{C}[U]$
 for some $U\in \SET$; then we may equip $U$ with the structure of a globally
-small category, such that $U$ is equivalent to $C$.  By the axiom of choice we
-may choose for each $x\in U$ a cartesian map
-$\InvImg{x}\bar{u}\to\Sub{x}\bar{u}$ over $x:1\to U$; then we say that a
-morphism $x\to y\in U$  is given by a vertical map $\InvImg{x}\bar{u}\to
-\InvImg{y}\bar{u}$ in $\FAM{C}[1] \simeq C$.
+small category such that $U$ is equivalent to $C$, using a construction that is similar to our implementation of the opposite fibration {%ref 000Q%}. In particular we define a
+morphism $x\to y\in U$ to be given by the following data:
 
-{%import 000M%}
+1. a cartesian map $a\to\Sub{x} \bar{u}$ over $x : 1\to U$,
+2. a cartesian map $b\to\Sub{y} \bar{u}$ over $y : 1\to U$,
+3. and a vertical map $h:a\to b$ in $\FAM{C}[1]\simeq C$,
+
+such that $(a\Sub{1},b\Sub{1},h\Sub{1})$ is identified with $(a\Sub{2},b\Sub{2},h\Sub{2})$ when $h_1$ and $h_2$ are equal modulo the (unique) vertical isomorphisms between the cartesian lifts in the sense depicted below:
+«
+\begin{tikzpicture}[diagram]
+  \SpliceDiagramSquare{
+    nw = a_1,
+    ne = a_2,
+    sw = b_1,
+    se = b_2,
+    north = \cong,
+    south = \cong,
+    west = h_1,
+    east = h_2,
+    east/node/style = upright desc,
+  }
+  \node (u) [between = ne and se, xshift = 2cm] {$\bar{u}$};
+  \draw[->] (ne) to node [sloped,above] {cart.}(u);
+  \draw[->] (se) to node [sloped,below] {cart.} (u);
+\end{tikzpicture}
+»
+
+Remember that a cartesian map $a\to\Sub{x}\bar{u}$ is standing for a *choice*
+of an object of $C$ encoded by $x\in U$. Because such choices are unique only
+up to isomorphism, we must include them explicitly in the data.
+
+**Note.** To define the categry $U$ above, we have used our assumption that
+*classes* are closed under quotients {% ref 000R %}.
