--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -6,6 +6,7 @@
 \newcommand\Gl[1]{\mathsf{gl}_{#1}}
 \newcommand\Idn[1]{1_{#1}}
 \newcommand\InvImg[1]{#1^{*}}
+\newcommand\OpCat[1]{#1^{\mathsf{o}}}
 \newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
 \newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
 \newcommand\SET{\mathbf{Set}}
