--- a/_nodes/000L.md
+++ b/_nodes/000L.md
@@ -58,5 +58,5 @@ Remember that a cartesian map $a\to\Sub{x}\bar{u}$ is standing for a *choice*
 of an object of $C$ encoded by $x\in U$. Because such choices are unique only
 up to isomorphism, we must include them explicitly in the data.
 
-**Note.** To define the categry $U$ above, we have used our assumption that
+**Note.** To define the category $U$ above, we have used our assumption that
 *classes* are closed under quotients {% ref 000R %}.
