--- a/_nodes/000Q.md
+++ b/_nodes/000Q.md
@@ -4,13 +4,14 @@ title: Opposite categories
 macrolib: topos
 ---
 
+**Construction.**
 Let $E$ be fibered over $B$; we may define the *opposite* fibered category
 $\OpCat{E}$ over $B$ like so:
 
 1. An object of $\OpCat{E}\Sub{x}$ is given by an object of $E\Sub{x}$.
 
 2. Given $f : x \to y\in B$, a morphism $\bar{x}\to_f \bar{y}$ in $\OpCat{E}$
-   is given by a cartesian map $\bar{y}\Sub{f} : \bar{y}\Sub{x} \to\Sub{f} \bar{y}$ together
+   is given in terms of $E$ by a cartesian map $\bar{y}\Sub{f} : \bar{y}\Sub{x} \to\Sub{f} \bar{y}$ together
    with a *vertical* map $h : \bar{y}\Sub{x}\to\Sub{\Idn{x}} \bar{y}$ as depicted below:
    «
     \begin{tikzpicture}[diagram]
@@ -50,6 +51,10 @@ $\OpCat{E}$ over $B$ like so:
    \end{tikzpicture}
    »
 
-**Note.** Above we have used the ability to take the quotient of a proper class {% ref 000R %}
+**Note.** Above we have used the ability to take the quotient of a proper class {% ref 000R %}.
+
+{% import 000T %}
+{% import 000U %}
+
 
 {% import 000S %}
