--- a/_nodes/000J.md
+++ b/_nodes/000J.md
@@ -7,8 +7,8 @@ macrolib: topos
 In ordinary category theory, a category $C$ is called *small* when the objects
 of $C$ can be arranged into a set, and so can for every $x,y\in C$ the
 collection of morphisms $x\to y$. It is useful to separate these two conditions
-when we generalize them to fibrations; the first is called *local smallness*
-and is discussed and defined in {%ref 000F%}. The former is called *global
+when we generalize them to fibrations. The latter is called *local smallness*
+and is discussed and defined in {%ref 000F%}; the former is called *global
 smallness* by Jacobs and factors through an important concept: the *generic object*.
 
 **Definition.** An ordinary category is called *globally small* when it has a set of objects.
