add some more citations

--- a/_nodes/000Q.md
+++ b/_nodes/000Q.md
@@ -3,6 +3,8 @@ title: Opposite categories
 macrolib: topos
 ---
 
+We adapt Bénabou's construction as reported by Streicher {%cite streicher:2018 -A%}.
+
 **Construction.**
 Let $E$ be fibered over $B$; we may define the *opposite* fibered category
 $\OpCat{E}$ over $B$ like so:
