change {%import...%} to @include{...}; remove dummy import_tag.rb

--- a/_nodes/0008.md
+++ b/_nodes/0008.md
@@ -3,14 +3,14 @@ title: Displayed categories and fibrations
 macrolib: topos
 ---
 
-{% import 0000 %}
-{% import 0001 %}
-{% import 0002 %}
-{% import 0003 %}
-{% import 0004 %}
-{% import 0005 %}
-{% import 000Q %}
-{% import 0006 %}
-{% import 0007 %}
+@include{0000}
+@include{0001}
+@include{0002}
+@include{0003}
+@include{0004}
+@include{0005}
+@include{000Q}
+@include{0006}
+@include{0007}
 
 
