--- a/_nodes/0009.md
+++ b/_nodes/0009.md
@@ -3,8 +3,8 @@ title: The Grothendieck construction
 macrolib: topos
 ---
 
-{%import 000A%}
-{%import 000B%}
-{%import 000D%}
+@include{000A}
+@include{000B}
+@include{000D}
 
 {{page.refs}}
