--- a/_nodes/000E.md
+++ b/_nodes/000E.md
@@ -3,7 +3,7 @@ title: Properties of fibrations
 macrolib: topos
 ---
 
-{%import 000F%}
-{%import 000J%}
-{%import 000N%}
+@include{000F}
+@include{000J}
+@include{000N}
 
