--- a/_nodes/000J.md
+++ b/_nodes/000J.md
@@ -12,6 +12,6 @@ smallness* by Jacobs {%cite jacobs:1999 -A%} and factors through an important co
 
 **Definition.** An ordinary category is called *globally small* when it has a set of objects.
 
-{%import 000K%}
+@include{000K}
 
-{%import 000P%}
+@include{000P}
