--- a/_nodes/000K.md
+++ b/_nodes/000K.md
@@ -7,4 +7,4 @@ Up to equivalence of categories, we may detect global smallness of a cateogry $C
 
 **Definition.** Let $E$ be a fibration over $B$; a *generic object* for $E$ is defined to be an object $\bar{u}\in \TotCat{E}$  such that for any $\bar{z}\in \TotCat{E}$ there exists a cartesian map $\bar{z}\to \bar{u}$.
 
-{%import 000L%}
+@include{000L}
