--- a/_nodes/000N.md
+++ b/_nodes/000N.md
@@ -19,4 +19,4 @@ by the *internal language*, in which a category is viewed as an algebra for the
 notion of internal categories is credited (independently) to Alexander
 Grothendieck and Charles Ehresmann.
 
-{%import 000O%}
+@include{000O}
