--- a/_nodes/000Q.md
+++ b/_nodes/000Q.md
@@ -54,8 +54,8 @@ $\OpCat{E}$ over $B$ like so:
 
 **Note.** Above we have used the ability to take the quotient of a proper class {% ref 000R %}.
 
-{% import 000T %}
-{% import 000U %}
+@include{000T}
+@include{000U}
 
 
-{% import 000S %}
+@include{000S}
