--- a/_nodes/000F.md
+++ b/_nodes/000F.md
@@ -7,6 +7,6 @@ There are a number of (equivalent) variations on the definition of a locally
 small fibration. We attempt to provide
 some intuition for these definitions.
 
-{%import 000G%}
-{%import 000H%}
-{%import 000I%}
+@include{000G}
+@include{000H}
+@include{000I}
