foundational improvements; externalization

--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -1,3 +1,4 @@
+\newcommand\BoldSymbol[1]{\boldsymbol{#1}}
 \newcommand\CandHom[3]{\mathbf{H}_{#1}(#2,#3)}
 \newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
@@ -18,3 +19,4 @@
 \newcommand\TOP[1]{\mathbf{Top}_{#1}}
 \newcommand\TotCat[1]{\widetilde{#1}}
 \newcommand\brc[1]{\{ #1 \}}
+\newcommand\brk[1]{[#1]}
