--- a/_nodes/000R.md
+++ b/_nodes/000R.md
@@ -3,21 +3,45 @@ title: Foundational assumptions
 macrolib: topos
 ---
 
-In our foundation we have a notions of *class* and *set*. When we speak
-informally of "collections of things", we are referring to classes; therefore,
-a "category" for us is one with a class of objects, and a class of morphisms
-from any one object to another. It is routine to define a class to be a formula
-in the language of set theory; we take a more agnostic approach and just say
-that classes are whatever is on the "outside".
+**Definition.** A *meta-category* $\mathfrak{C}$ is defined by explaining what
+an object of $\mathfrak{E}$ is, and, given two objects $x,y\in \mathfrak{E}$,
+what a morphism from $x$ to $y$ is, together with the following operations:
 
-**Explanation.** A *class* $\Phi$ is defined by a specification of how to
-construct an element of $\Phi$, and when two elements of $\Phi$ are considered
-equal.
-
-Hence we assume the ability to take quotients of classes.
-
-**Assumption.** We assume that there exists a category $\SET$ satisfying the axioms of
-[ETCS](http://ncatlab.org/nlab/show/ETCS); a *set* for us is then an object of
-the category $\SET$.
+1. for each object $x\in \mathfrak{E}$, an *identity* map $\Idn{x} : x \to x$,
+2. for any two maps $f:x\to y$ and $g:y\to z$, a *composite map* $f;g : x \to z$,
+3. such that the following equations hold:
+\\[
+  \Idn{x};h = h\qquad
+  h;\Idn{y} = h\qquad
+  f;(g;h) = (f;g);{h}
+\\]
 
 
+In our explanation above, we have not imposed any restrictions on what kinds of
+things the objects and morphisms are; our definition is pre-mathematical, so we
+do not assume beforehand that there is a such thing as a collection of "all"
+meta-categories.
+
+**Remark.** We may define analogous notions of meta-functor, etc. But we do not
+assume that the notion of "all meta-functors $\mathfrak{C}\to\mathfrak{D}$" is
+well-defined; the notion is entirely schematic.
+
+
+**Assumption.** We assume a meta-category $\BoldSymbol{\mathfrak{Coll}}$ whose
+objects we will refer to as "collections". We assume that the meta-category of all collections satisfies the axioms of Lawvere's [ETCS](http://ncatlab.org/nlab/show/ETCS).
+
+**Definition.** A *category* $E$ is defined to be a meta-category whose objects
+are defined to be the elements of some collection, and for any two objects
+$x,y\in E$ the morphisms $x\to y$ are defined to be an element of some
+collection.
+
+Consequently there exists a meta-category $\BoldSymbol{\mathfrak{Cat}}$ of all
+categories.
+
+**Assumption.** At times we may assume that there exists a *category*
+$\SET\subseteq\BoldSymbol{\mathfrak{Coll}}$ of collections that we will refer
+to as sets, such that $\SET$ is closed under the axioms of
+[ETCS](https://ncatlab.org/show/ETCS). Rather than work with $\SET$ at all
+times, our approach is to use the tools of relative category theory to
+objectify the notions of "small" and "locally small" category over any category
+$B$, generalizing the role of $\SET$ from classical category theory.
