the externalization is globally small

--- a/_nodes/000V.md
+++ b/_nodes/000V.md
@@ -29,3 +29,22 @@ Let $C$ be an internal category in $E$. We may define a fibered category $\brk{C
 **The externalization is a fibration.** Given an object $v\in \brk{C}\Sub{y}$ and a
 morphism $f:x\to y$ in $E$, we may define a cartesian lift
 $\InvImg{f}v\to\Sub{f} v$ by setting $\InvImg{f}v = v\circ f : x \to C\Sub{0}$.
+
+
+**The externalization is globally small.** We may choose a generic object {%ref 000K%} for $\brk{C}$, namely the identity element $(C\Sub{0},\Idn{C\Sub{0}})\in \TotCat{\brk{C}}$. Given any object $(x,u)\in \TotCat{\brk{C}}$ the cartesian map $(x,u)\to (C\Sub{0},\Idn{C\Sub{0}})$ is given as follows:
+«
+\begin{tikzpicture}[diagram]
+  \node (x) {$x$};
+  \node (y) [below = of x] {$C\Sub{0}$};
+  \node (C/1) [right = of x] {$C\Sub{1}$};
+  \node (C/0) [below = of C/1] {$C\Sub{0}$};
+  \node (C/0') [above = of C/1] {$C\Sub{0}$};
+  \draw[->] (x) to node [upright desc] {$\Con{idn}\Sub{u}$} (C/1);
+  \draw[->] (C/1) to node [right] {$t$} (C/0);
+  \draw[->] (C/1) to node [right] {$s$} (C/0');
+  \draw[->] (y) to node [below] {$\Idn{C\Sub{0}}$} (C/0);
+  \draw[->] (x) to node [left] {$u$} (y);
+  \draw[->] (x) to node [sloped,above] {$u$} (C/0');
+\end{tikzpicture}
+»
+
