mention cartesian closedness of the metacategory of all categories

--- a/_nodes/000R.md
+++ b/_nodes/000R.md
@@ -36,7 +36,10 @@ $x,y\in E$ the morphisms $x\to y$ are defined to be an element of some
 collection.
 
 Consequently there exists a meta-category $\BoldSymbol{\mathfrak{Cat}}$ of all
-categories.
+categories. Following [Lawvere](http://rfcwalters.blogspot.com/2010/10/old-post-why-are-we-concerned-fw.html) (but deviating from some other authors that
+ground the notion of meta-categories in *classes*) we assert that
+$\BoldSymbol{\mathfrak{Cat}}$ is cartesian closed; in other words, all functor
+categories exist regardless of size.
 
 **Assumption.** At times we may assume that there exists a *category*
 $\SET\subseteq\BoldSymbol{\mathfrak{Coll}}$ of collections that we will refer
