--- a/_nodes/000R.md
+++ b/_nodes/000R.md
@@ -32,7 +32,7 @@ objects we will refer to as "collections". We assume that the meta-category of a
 
 **Definition.** A *category* $E$ is defined to be a meta-category whose objects
 are defined to be the elements of some collection, and for any two objects
-$x,y\in E$ the morphisms $x\to y$ are defined to be an element of some
+$x,y\in E$ the morphisms $x\to y$ are defined to be the elements of some
 collection.
 
 Consequently there exists a meta-category $\BoldSymbol{\mathfrak{Cat}}$ of all
