--- a/_nodes/000R.md
+++ b/_nodes/000R.md
@@ -37,7 +37,7 @@ collection.
 
 Consequently there exists a meta-category $\BoldSymbol{\mathfrak{Cat}}$ of all
 categories. Following [Lawvere](http://rfcwalters.blogspot.com/2010/10/old-post-why-are-we-concerned-fw.html) (but deviating from some other authors that
-ground the notion of meta-categories in *classes*) we assert that
+ground the notion of meta-categories in *classes*) we notice that
 $\BoldSymbol{\mathfrak{Cat}}$ is cartesian closed; in other words, all functor
 categories exist regardless of size.
 
