family fibration is backwards

--- a/_nodes/0006.md
+++ b/_nodes/0006.md
@@ -8,8 +8,8 @@ Any ordinary category $C$ can be viewed as a displayed category $\FAM{C}$ over $
 1. For $S\in \SET$, object in $\FAM{C}[S]$ is specified by a functor $C^S$
    where $S$ is regarded as a discrete category.
 2. Given $f : S \to T$ in $\SET$ and $x\in C^S$ and $y\in C^T$, a morphism
-   $x \to\Sub{f} y$ is given by a morphism $\InvImg{f}x\to y$ in $C^S$ where
-   $\InvImg{f} : C^T \to C^S$ is precomposiiton with $f$.
+   $x \to\Sub{f} y$ is given by a morphism $x\to \InvImg{f}y$ in $C^S$ where
+   $\InvImg{f} : C^T \to C^S$ is precomposition with $f$.
 
 The displayed category $\FAM{C}$ is in fact a cartesian fibration. This family
 fibration is the starting point for developing a *relative* form of category
