--- a/_nodes/000Y.md
+++ b/_nodes/000Y.md
@@ -184,5 +184,5 @@ exists. We define $\bar\alpha$ using the universal property of the cartesian lif
 
 That $\alpha:\bar{h}\to\Sub{\alpha}\brk{u,v}$ is cartesian follows from the
 "generalized pullback lemma" for cartesian morphisms: it suffices to observe
-that both $\bar{h}\to u$ and its second factor $\InvImg{u,v}u\to u$ are
+that both $\bar{h}\to u$ and its second factor $\InvImg{\brk{u,v}}u\to u$ are
 cartesian.
