--- a/_nodes/0000.md
+++ b/_nodes/0000.md
@@ -26,4 +26,4 @@ Note that these are well-defined because of the corresponding
 laws for the base category $B$.
 
 
-**Notation**. When we have too many subscripts, $E[x]$ instead of $E\Sub{x}$.
+**Notation**. When we have too many subscripts, we will write $E[x]$ instead of $E\Sub{x}$.
