--- a/_nodes/000B.md
+++ b/_nodes/000B.md
@@ -10,7 +10,7 @@ simply set $P\Sub{x}$ to be the collection of objects $u\in E$ such that $Pu=x$.
 it stands there is a more subtle version that will coincide up to categorical
 equivalence with the naïve one in all cases that the latter is meaningful.
 
-1. We define an object of $P\Sub{x}$ to be be a pair $(u,\phi\Sub{u})$ where $i\in E$ and
+1. We define an object of $P\Sub{x}$ to be a pair $(u,\phi\Sub{u})$ where $u\in E$ and
    $\phi\Sub{u} : Pu\cong x$. It is good to visualize such a pair as a "crooked
    leg" like so:
 «
