--- a/_nodes/000D.md
+++ b/_nodes/000D.md
@@ -3,7 +3,7 @@ title: Iteration and pushforward
 macrolib: topos
 ---
 
-It also makes sense to speak of a categories displayed over other displayed
+It also makes sense to speak of categories displayed over other displayed
 categories; one way to formalize this notion is as follows. Let $E$ be
 displayed over $B$; we define a category displayed over $E$ to be simply a
 category displayed over the total category $\TotCat{E}$.
