--- a/_nodes/000U.md
+++ b/_nodes/000U.md
@@ -3,7 +3,7 @@ title: Cartesian lifts in the opposite category
 macrolib: topos
 ---
 
-The foreging characterization {%ref 000T%} of cartesian maps in $\OpCat{E}$
+The foregoing characterization {%ref 000T%} of cartesian maps in $\OpCat{E}$
 immediately implies that $\OpCat{E}$ is fibered over $B$.
 
 **Corollary.** The displayed category $\OpCat{E}$ is a fibration.
