typos and a remark about the codomain functor

--- a/_nodes/000A.md
+++ b/_nodes/000A.md
@@ -12,7 +12,7 @@ B$; in this case $\TotCat{E}$ is called the *total category* of $E$.
 2. A morphism $(x,\bar{x})\to (y,\bar{y})$ in $\TotCat{E}$ is given by a pair $(f,\bar{f})$ where
    $f:x\to y$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
 
-The construction of the total category of displayed category is called the *Grothendieck construction.*
+The construction of the total category of a displayed category is called the *Grothendieck construction.*
 
-**Exercise.** Prove that the total category $\TotCat{\SelfIx{B}}$ of the canonical self-indexing is the arrow category $B^{\to}$.
+**Exercise.** Prove that the total category $\TotCat{\SelfIx{B}}$ of the canonical self-indexing is the arrow category $B^{\to}$, and the projection is the codomain functor.
 
