--- a/_nodes/0006.md
+++ b/_nodes/0006.md
@@ -5,7 +5,7 @@ macrolib: topos
 
 Any ordinary category $C$ can be viewed as a displayed category $\FAM{C}$ over $\SET$:
 
-1. For $S\in \SET$, object in $\FAM{C}[S]$ is specified by a functor $C^S$
+1. For $S\in \SET$, an object in $\FAM{C}[S]$ is specified by a functor $C^S$
    where $S$ is regarded as a discrete category.
 2. Given $f : S \to T$ in $\SET$ and $x\in C^S$ and $y\in C^T$, a morphism
    $x \to\Sub{f} y$ is given by a morphism $x\to \InvImg{f}y$ in $C^S$ where
