internalization of a small fibration

--- a/_nodes/000N.md
+++ b/_nodes/000N.md
@@ -20,3 +20,7 @@ notion of internal categories is credited (independently) to Alexander
 Grothendieck and Charles Ehresmann.
 
 @include{000O}
+@include{000V}
+@include{0010}
+@include{0011}
+@include{000Z}
