--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -3,6 +3,7 @@
 \newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
 \newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
+\newcommand\FullSubfib[1]{\mathbf{Full}(#1)}
 \newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
 \newcommand\Gl[1]{\mathsf{gl}_{#1}}
 \newcommand\Idn[1]{1_{#1}}
@@ -20,3 +21,5 @@
 \newcommand\TotCat[1]{\widetilde{#1}}
 \newcommand\brc[1]{\{ #1 \}}
 \newcommand\brk[1]{[#1]}
+\newcommand\gl[1]{\langle #1 \rangle}
+\newcommand\prn[1]{(#1)}
