--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -4,8 +4,8 @@ macrolib: topos
 ---
 
 A displayed category $E$ over $B$ is a *discrete right fibration* when for each
-morphism $f:x\to y$ and displayed object $\bar{y}\in E_y$, there exists a unique pair
-of $\bar{x}\in E_x$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
+morphism $f:x\to y$ and displayed object $\bar{y}\in E\Sub{y}$, there exists a unique pair
+of $\bar{x}\in E\Sub{x}$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
 «
 \DiagramSquare{
   west/style = lies over,
@@ -20,7 +20,7 @@ of $\bar{x}\in E_x$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
 }
 »
 
-TODO: need to require that each $E_x$ is small?
+TODO: need to require that each $E\Sub{x}$ is small?
 
 Whereas cartesian fibrations correspond to categories indexed pseudofunctorially by a
 category, discrete right fibrations are an important special case corresponding to
@@ -28,14 +28,14 @@ presheaves: sets indexed by a category.
 
 **Exercise.** Prove that every discrete right fibration is a cartesian fibration.
 
-For any category $E$ displayed over $B$, the collection of objects $E_b$ over $b\in
+For any category $E$ displayed over $B$, the collection of objects $E\Sub{b}$ over $b\in
 B$ has the structure of a category {%ref 0005 %}. If $E$ is a discrete right
 fibration over $B$, then its fiber categories are *discrete*: their only morphisms
 are the displayed identities.
 
 From any discrete right fibration, we obtain a functor $\OpCat{B}\to\SET$ sending
-each $x\in B$ to the set $E_x$ and each $f:x\to y$ in $B$ to the function $E_y\to
-E_x$ that sends $\bar{y}\in E_y$ to the domain of the unique displayed morphism
+each $x\in B$ to the set $E\Sub{x}$ and each $f:x\to y$ in $B$ to the function $E\Sub{y}\to
+E\Sub{x}$ that sends $\bar{y}\in E\Sub{y}$ to the domain of the unique displayed morphism
 $\bar{f}$.
 
 TODO: discuss the terminology of "right fibration"
