--- a/_nodes/0022.md
+++ b/_nodes/0022.md
@@ -9,9 +9,7 @@ An important example of a discrete right fibration is the following $E$ over
 $\OpCat{\SET}$:
 
 1. For $X\in\OpCat{\SET}$, we define $E\Sub{X}$ to be the collection of elements $x\in X$.
-2. For $f:Y\to X\in\OpCat{\SET}$, we define $E\Sub{f}(y,x)$ to be $\{ \star \mid f(x) = y \}$.
-
-TODO: why don't the braces work?
+2. For $f:Y\to X\in\OpCat{\SET}$, we define $E\Sub{f}(y,x)$ to be $\brc{\star \mid f(x) = y}$.
 
 TODO: come up with a notation for $E$?
 
@@ -60,9 +58,9 @@ TODO:
 \DiagramSquare{
   nw/style = pullback,
   height = 1.5cm,
-  nw = E_b,
+  nw = E\Sub{b},
   ne = \TotCat{E},
-  east = p_E,
+  east = p\Sub{E},
   north = \bar{f},
   sw = 1,
   se = B,
