rewrite classifying discrete right fibration using change of base

--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -3,6 +3,8 @@ title: Discrete right fibrations
 macrolib: topos
 ---
 
+TODO: find an invariant definition, fix size issues; replace by internal definition?
+
 A displayed category $E$ over $B$ is a *discrete right fibration* when for each
 morphism $f:x\to y$ and displayed object $\bar{y}\in E\Sub{y}$, there exists a unique pair
 of $\bar{x}\in E\Sub{x}$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
@@ -19,8 +21,6 @@ of $\bar{x}\in E\Sub{x}$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
   south = f,
 }
 »
-
-TODO: need to require that each $E\Sub{x}$ is small?
 
 Whereas cartesian fibrations correspond to categories indexed pseudofunctorially by a
 category, discrete right fibrations are an important special case corresponding to
