--- a/_nodes/0022.md
+++ b/_nodes/0022.md
@@ -5,65 +5,30 @@ macrolib: topos
 
 TODO: introduce discrete left fibrations and opposites before this, to avoid the ops?
 
-An important example of a discrete right fibration is the following $E$ over
-$\OpCat{\SET}$:
+An important example is the *classifying discrete right fibration* of $\PtSET$ over
+$\OpCat{\SET}$, defined as follows:
 
-1. For $X\in\OpCat{\SET}$, we define $E\Sub{X}$ to be the collection of elements $x\in X$.
-2. For $f:Y\to X\in\OpCat{\SET}$, we define $E\Sub{f}(y,x)$ to be $\brc{\star \mid f(x) = y}$.
+1. For $X\in\OpCat{\SET}$, we define $\PtSET\brk{X}$ to be the collection of elements $x\in X$.
+2. For $f:Y\to X\in\OpCat{\SET}$, we define $\PtSET\brk{f}(y,x)$ to be $\brc{\star \mid f(x) = y}$.
 
-TODO: come up with a notation for $E$?
+To verify this is a discrete right fibration, note that for any $f:Y\to X$ and $x\in
+\PtSET\brk{X}$, there is a unique element of $\PtSET\brk{Y}$ equal to $f(x)$, namely $f(x)$.
 
-This is a discrete right fibration: for any $f:Y\to X$ and $x\in E\Sub{X}$, there is a
-unique element of $E\Sub{Y}$ equal to $f(x)$, namely $f(x)$.
-
-**Exercise.** Prove that the total category $\TotCat{E}$ {%ref 000A %} of the above
-is $\OpCat{\SET\Sub{\bullet}}$ and the projection functor is the forgetful functor
+**Exercise.** Prove that the total category $\TotCat{\PtSET}$ {%ref 000A %} is
+$\OpCat{\SET\Sub{\bullet}}$ and the projection functor is the forgetful functor
 $\OpCat{\SET\Sub{\bullet}}\to\OpCat{\SET}$.
 
-The functor $\OpCat{\SET\Sub{\bullet}}\to\OpCat{\SET}$ is important because *all*
-discrete right fibrations arise as pullbacks of it:
-«
-\DiagramSquare{
-  nw/style = pullback,
-  height = 1.5cm,
-  nw = E,
-  sw = B,
-  west = P,
-  ne = \OpCat{\SET\Sub{\bullet}},
-  se = \OpCat{\SET},
-  south = F,
-}
-»
+We say that $\PtSET$ over $\OpCat{\SET}$ is the classifying discrete right fibration
+because *all* discrete right fibrations arise via change of base {%ref 0007 %} from
+$\PtSET$.
 
-**Lemma.** If the functor $P:E\to B$ is a pullback of
-$\OpCat{\SET\Sub{\bullet}}\to\OpCat{\SET}$, then $P\Sub{\bullet}$ is a discrete right
-fibration over $B$.
+**Lemma.** Let $F:B\to\OpCat{\SET}$ be a functor; then $\InvImg{F}\PtSET$ is a
+discrete right fibration over $B$.
 
-**Lemma.** If $E$ is a discrete right fibration over $B$, then
-$p\Sub{E}:\TotCat{E}\to B$ is the pullback of
-$\OpCat{\SET\Sub{\bullet}}\to\OpCat{\SET}$ along the functor constructed in {%ref
-0021 %}.
-
-TODO: define the category of discrete fibrations and prove this is the other
-direction of an equivalence?
+**Lemma.** Let $E$ be a discrete right fibration over $B$, and let
+$F:B\to\OpCat{\SET}$ be the functor constructed from $E$ as in {%ref 0021 %}. Then
+$E$ can be reconstructed as $\InvImg{F}\PtSET$.
 
 TODO: *category of elements* (terminological issue: discrete left fibration?)
 
 TODO: make sure that we talk everywhere about "cartesian" fibrations
-
-TODO: later discussion about internal discrete right fibrations
-
-TODO:
-«
-\DiagramSquare{
-  nw/style = pullback,
-  height = 1.5cm,
-  nw = E\Sub{b},
-  ne = \TotCat{E},
-  east = p\Sub{E},
-  north = \bar{f},
-  sw = 1,
-  se = B,
-  south = b,
-}
-»
