--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -11,6 +11,7 @@
 \newcommand\OpCat[1]{#1^{\mathsf{o}}}
 \newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
 \newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
+\newcommand\PtSET{{\mathbf{Pt}_{\mathbf{Set}}}}
 \newcommand\SET{\mathbf{Set}}
 \newcommand\SelfIx[1]{\underline{#1}}
 \newcommand\Sh[1]{\boldsymbol{\mathcal{S}}_{#1}}
