category of elements

--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -5,6 +5,8 @@ macrolib: topos
 
 TODO: find an invariant definition, fix size issues; replace by internal definition?
 
+TODO: discuss the terminology of "right fibration"
+
 A displayed category $E$ over $B$ is a *discrete right fibration* when for each
 morphism $f:x\to y$ and displayed object $\bar{y}\in E\Sub{y}$, there exists a unique pair
 of $\bar{x}\in E\Sub{x}$ and $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
@@ -33,9 +35,7 @@ B$ has the structure of a category {%ref 0005 %}. If $E$ is a discrete right
 fibration over $B$, then its fiber categories are *discrete*: their only morphisms
 are the displayed identities.
 
-From any discrete right fibration, we obtain a functor $\OpCat{B}\to\SET$ sending
-each $x\in B$ to the set $E\Sub{x}$ and each $f:x\to y$ in $B$ to the function $E\Sub{y}\to
-E\Sub{x}$ that sends $\bar{y}\in E\Sub{y}$ to the domain of the unique displayed morphism
-$\bar{f}$.
-
-TODO: discuss the terminology of "right fibration"
+From any discrete right fibration, we obtain a functor $B\to\OpCat{\SET}$
+sending each $x\in B$ to the set $E\Sub{x}$ and each $f:x\to y$ in $B$ to the
+function $E\Sub{y}\to E\Sub{x}$ in $\SET$ that sends $\bar{y}\in E\Sub{y}$ to
+the domain of the unique displayed morphism $\bar{f}$.
