--- a/_nodes/0022.md
+++ b/_nodes/0022.md
@@ -29,6 +29,8 @@ discrete right fibration over $B$.
 $F:B\to\OpCat{\SET}$ be the functor constructed from $E$ as in {%ref 0021 %}. Then
 $E$ can be reconstructed as $\InvImg{F}\PtSET$.
 
-TODO: *category of elements* (terminological issue: discrete left fibration?)
+The *category of elements* of a presheaf $F:\OpCat{B}\to\SET$ is
+$\TotCat{\InvImg{\prn{\OpCat{F}}}\PtSET}$ equipped with its projection functor to
+$B$.
 
-TODO: make sure that we talk everywhere about "cartesian" fibrations
+TODO: terminological issue
