--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -82,11 +82,18 @@
   volume = {21},
 }
 
-@unpublished{ahrens-lumsdaine:2019,
+@article{ahrens-lumsdaine:2019,
   author = {Ahrens, Benedikt and Lumsdaine, Peter LeFanu},
+  url = {https://lmcs.episciences.org/5252},
   year = {2019},
   month = mar,
+  doi = {10.23638/LMCS-15(1:20)2019},
   eprint = {1705.04296},
   eprinttype = {arXiv},
+  issue = {1},
+  journal = lmcs,
   title = {Displayed Categories},
+  volume = {15},
 }
+
+
