feat: #27 abandon @include

--- a/_nodes/0008.md
+++ b/_nodes/0008.md
@@ -1,16 +1,14 @@
 ---
 title: Displayed categories and fibrations
 macrolib: topos
+subnodes:
+  - "0000"
+  - "0001"
+  - "0002"
+  - "0003"
+  - "0004"
+  - "0005"
+  - "000Q"
+  - "0006"
+  - "0007"
 ---
-
-@include{0000}
-@include{0001}
-@include{0002}
-@include{0003}
-@include{0004}
-@include{0005}
-@include{000Q}
-@include{0006}
-@include{0007}
-
-
