--- a/_nodes/0009.md
+++ b/_nodes/0009.md
@@ -1,10 +1,10 @@
 ---
 title: The Grothendieck construction
 macrolib: topos
+subnodes:
+  - 000A
+  - 000B
+  - 000D
 ---
-
-@include{000A}
-@include{000B}
-@include{000D}
 
 {{page.refs}}
