--- a/_nodes/000B.md
+++ b/_nodes/000B.md
@@ -1,6 +1,8 @@
 ---
 title: Displayed categories from functors
 macrolib: topos
+subnodes:
+  - 000C
 ---
 
 In many cases, one starts with a functor $P:E\to B$; if it were meaningful to
@@ -56,5 +58,3 @@ $u$.
 **Exercise.** Explicitly construct the functorial action of $\TotCat{P\Sub{\bullet}}\to E$.
 
 **Exercise.** Verify that $\TotCat{P\Sub{\bullet}}\to E$ is a categorical equivalence.
-
-@include{000C}
