--- a/_nodes/000J.md
+++ b/_nodes/000J.md
@@ -1,6 +1,9 @@
 ---
 title: Globally small fibrations
 macrolib: topos
+subnodes:
+  - 000K
+  - 000P
 ---
 
 In ordinary category theory, a category $C$ is called *small* when the objects
@@ -11,7 +14,3 @@ and is discussed and defined in {%ref 000F%}; the former is called *global
 smallness* by Jacobs {%cite jacobs:1999 -A%} and factors through an important concept: the *generic object*.
 
 **Definition.** An ordinary category is called *globally small* when it has a set of objects.
-
-@include{000K}
-
-@include{000P}
