--- a/_nodes/000Q.md
+++ b/_nodes/000Q.md
@@ -1,6 +1,10 @@
 ---
 title: Opposite categories
 macrolib: topos
+subnodes:
+  - 000T
+  - 000U
+  - 000S
 ---
 
 We adapt Bénabou's construction as reported by Streicher {%cite streicher:2018 -A%}.
@@ -51,9 +55,3 @@ $\OpCat{E}$ over $B$ like so:
     \draw[->] (yx/1) to node [upright desc] {$\cong$} (yx/2);
    \end{tikzpicture}
    »
-
-@include{000T}
-@include{000U}
-
-
-@include{000S}
