--- a/_nodes/000V.md
+++ b/_nodes/000V.md
@@ -1,6 +1,10 @@
 ---
 title: The externalization of an internal category
 macrolib: topos
+subnodes:
+  - 000W
+  - 000X
+  - 000Y
 ---
 
 Let $C$ be an internal category in $E$. We may define a fibered category $\brk{C}$ over $E$ called the *externalization* of $C$.
@@ -25,8 +29,3 @@ Let $C$ be an internal category in $E$. We may define a fibered category $\brk{C
    \draw[->] (x) to node [sloped,above] {$u$} (C/0');
    \end{tikzpicture}
    »
-
-@include{000W}
-@include{000X}
-@include{000Y}
-
