--- a/_nodes/000F.md
+++ b/_nodes/000F.md
@@ -1,12 +1,12 @@
 ---
 title: Locally small fibrations
 macrolib: topos
+subnodes:
+  - 000G
+  - 000H
+  - 000I
 ---
 
 There are a number of (equivalent) variations on the definition of a locally
 small fibration. We attempt to provide
 some intuition for these definitions.
-
-@include{000G}
-@include{000H}
-@include{000I}
