--- a/_nodes/000K.md
+++ b/_nodes/000K.md
@@ -1,10 +1,10 @@
 ---
 title: Generic objects
 macrolib: topos
+subnodes:
+  - 000L
 ---
 
 Up to equivalence of categories, we may detect global smallness of a cateogry $C$ from the perspective of the family fibration $\FAM{C}$ {%ref 0006%}. In particular, a category is equivalent to a globally small category when its family fibration has a *generic object* in the following sense.
 
 **Definition.** Let $E$ be a fibration over $B$; a *generic object* for $E$ is defined to be an object $\bar{u}\in \TotCat{E}$  such that for any $\bar{z}\in \TotCat{E}$ there exists a cartesian map $\bar{z}\to \bar{u}$.
-
-@include{000L}
