--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -1,11 +1,9 @@
 ---
-title: Discrete right fibrations
+title: Strictly discrete right fibrations
 macrolib: topos
 ---
 
 TODO: find an invariant definition, fix size issues; replace by internal definition?
-
-TODO: discuss the terminology of "right fibration"
 
 A displayed category $E$ over $B$ is a *discrete right fibration* when for each
 morphism $f:x\to y$ and displayed object $\bar{y}\in E\Sub{y}$, there exists a unique pair
