qualify fibration with "cartesian" as needed

--- a/_nodes/000I.md
+++ b/_nodes/000I.md
@@ -4,7 +4,7 @@ macrolib: topos
 ---
 
 Based on our explorations above, we are now prepared to write down (and
-understand) the proper definition of local smallness for an arbitrary fibration
+understand) the proper definition of local smallness for an arbitrary cartesian fibration
 $E$ over $B$, which should be thought of as a (potentially large) category
 relative to $B$.
 
@@ -66,7 +66,7 @@ This structure can be rephrased in terms of a displayed category $\CandHom{x}{u}
    \end{tikzpicture}
    »
 
-**Definition.** A fibration $E$ over $B$ is *locally small* if and only if for
+**Definition.** A cartesian fibration $E$ over $B$ is *locally small* if and only if for
 each $x\in B$ and $u,v\in E\Sub{x}$, the total category $\TotCat{\CandHom{x}{u}{v}}$
 has a terminal object.
 
