--- a/_nodes/000N.md
+++ b/_nodes/000N.md
@@ -5,10 +5,10 @@ macrolib: topos
 
 The purpose of this section is to develop the relationship between *internal
 categories* (categories defined in the internal language of a category $B$) and
-fibrations over $B$, generalizing the relationship between categories internal
+cartesian fibrations over $B$, generalizing the relationship between categories internal
 to $\SET$ (i.e. small categories) and their family fibrations over $\SET$.
 
-**Definition.** A fibration is called *small* when it is both locally small
+**Definition.** A cartesian fibration is called *small* when it is both locally small
 {%ref 000I%} and globally small {%ref 000J%}.
 
 We have already seen in {%ref 000G%} and {%ref 000L%} that smallness in the
