--- a/_nodes/0011.md
+++ b/_nodes/0011.md
@@ -3,7 +3,7 @@ title: The full internal subcategory associated to a displayed object
 macrolib: topos
 ---
 
-This full internal subfibration {%ref 0010%} associated to a displayed object $\bar{u}$ of a locally small fibration $E$ over $B$ can be seen to be equivalent to the externalization
+This full internal subfibration {%ref 0010%} associated to a displayed object $\bar{u}$ of a locally small cartesian fibration $E$ over $B$ can be seen to be equivalent to the externalization
 of an internal category $\gl{\bar{u}}$ in $B$. In particular, we let the object of objects $\gl{\bar{u}}\Sub{0}$ be $u$ itself; defining the object of arrows $\gl{\bar{u}}\Sub{1}$ is more complex, making critical use of the local smalness of $E$ over $B$.
 
 We will think of the fiber $E\Sub{u\times u}$ as the category of
