--- a/_nodes/0002.md
+++ b/_nodes/0002.md
@@ -7,7 +7,7 @@ A displayed category $E$ over $B$ is said to be a *cartesian fibration*, when
 for each morphism $f : x \to y$ and displayed object $\bar{y}\in E\Sub{y}$, there
 exists a displayed object $\bar{x}\in E\Sub{x}$ and a *cartesian* morphism
 $\bar{f} : \bar{x}\to\Sub{f} \bar{y}$. Note that the pair $(\bar{x},\bar{f})$ is unique up to
-unique isomorphism, so being fibered is a *property* of a displayed category.
+unique isomorphism, so being a cartesian fibration is a *property* of a displayed category.
 
 There are other variations of fibration. For instance, $E$ is said to be an
 *isofibration* when the condition above holds just for isomorphisms $f : x
