--- a/_nodes/000H.md
+++ b/_nodes/000H.md
@@ -4,7 +4,7 @@ macrolib: topos
 ---
 
 We will reformulate the above in a way that uses only the language that makes
-sense for an arbitrary fibration, though for now we stick with $\FAM{C}$. Given
+sense for an arbitrary cartesian fibration, though for now we stick with $\FAM{C}$. Given
 $u,v\in \FAM{C}[I]$, we have a "relative hom family" $[u,v]\in\Sl{\SET}{I}$,
 defined in {%ref 000G%}. The fact that each $[u,v]\Sub{i}$ is the set of all
 morphisms $u\Sub{i}\to v\Sub{i}$ can be rephrased more abstractly.
