--- a/_nodes/000P.md
+++ b/_nodes/000P.md
@@ -3,4 +3,4 @@ title: The definition of global smallness
 macrolib: topos
 ---
 
-**Definition.** A fibration $E$ over $B$ is called *globally small* when it has a generic object {%ref 000K%}.
+**Definition.** A cartesian fibration $E$ over $B$ is called *globally small* when it has a generic object {%ref 000K%}.
