--- a/_nodes/000U.md
+++ b/_nodes/000U.md
@@ -6,7 +6,7 @@ macrolib: topos
 The foregoing characterization {%ref 000T%} of cartesian maps in $\OpCat{E}$
 immediately implies that $\OpCat{E}$ is fibered over $B$.
 
-**Corollary.** The displayed category $\OpCat{E}$ is a fibration.
+**Corollary.** The displayed category $\OpCat{E}$ is a cartesian fibration.
 
 **Proof.**
 Fixing $\bar{y}\in \OpCat{E}\Sub{y}$ and $f:x\to y\in B$, we must
