choose better notation

--- a/_nodes/0013.md
+++ b/_nodes/0013.md
@@ -67,7 +67,7 @@ cartesian lift $\bar{f}:\bar{x}\Sup{\prime}\to\Sub{f}\bar{y}$ with a vertical ma
     \draw[lies over] (u') to (u);
     \draw[->,bend left=30] (u') to node [sloped,above] {$\bar{g}$} (ne);
     \draw[double] (u) to (sw);
-    \draw[->,exists] (u') to node [desc] {$\bar{\i}$} (nw);
+    \draw[->,exists] (u') to node [desc] {$i$} (nw);
   \end{tikzpicture}
 »
 Because vertical maps are isomorphisms and $\bar{f}$ is cartesian, we can observe
@@ -93,6 +93,6 @@ that $\bar{g}$ is cartesian as follows, writing $\bar{m} : \bar{u}\to\Sub{m}
     \draw[lies over] (u') to (u);
     \draw[->,bend left=30] (u') to node [sloped,above] {$\bar{h}$} (ne);
     \draw[->] (u) to node [sloped,below] {$m$} (sw);
-    \draw[->,exists] (u') to node [desc] {$\bar{m};\bar{\i}\Sup{-1}$} (nw);
+    \draw[->,exists] (u') to node [desc] {$\bar{m};i\Sup{-1}$} (nw);
   \end{tikzpicture}
 »
