--- a/_nodes/0000.md
+++ b/_nodes/0000.md
@@ -15,7 +15,7 @@ following data {%cite ahrens-lumsdaine:2019%}:
     \\[
       E\Sub{f}(\bar{x},\bar{y}) \times E\Sub{g}(\bar{y},\bar{z}) \to E\Sub{f;g}(\bar{x},\bar{z})
     \\]
-   that we will denote like ordinary (digrammatic) function composition,
+   that we will denote like ordinary (diagrammatic) function composition,
 5. such that the following equations hold:
   \\[
       \Idn{\bar{x}};\bar{h} = \bar{h}\qquad
