the generalized pullback lemma

--- a/_nodes/0004.md
+++ b/_nodes/0004.md
@@ -11,7 +11,7 @@ given by the following data:
 2. for each displayed morphism $\bar{f} : \bar{x}\to\Sub{f}\bar{y}$, a displayed morphism $\bar{U}\bar{f} : \bar{U}\bar{x}\to\Sub{Uf}\bar{U}\bar{y}$,
 3. such that the assignment $\bar{U}f$ preserves displayed identities and displayed composition.
 
-From this notion, we can see the varition of displayed categories over their
+From this notion, we can see the variation of displayed categories over their
 base categories itself has a "displayed categorical" structure; up to size
 issues, we could speak of the displayed *bicategory* of displayed categories.
 
