add back ref and fix typos

--- a/_nodes/000Y.md
+++ b/_nodes/000Y.md
@@ -182,7 +182,7 @@ exists. We define $\bar\alpha$ using the universal property of the cartesian lif
 \end{tikzpicture}
 »
 
-That $\alpha:\bar{h}\to\Sub{\alpha}\brk{u,v}$ is cartesian follows from the
-"generalized pullback lemma" for cartesian morphisms: it suffices to observe
-that both $\bar{h}\to u$ and its second factor $\InvImg{\brk{u,v}}u\to u$ are
-cartesian.
+That $\bar{\alpha}:\bar{h}\to\Sub{\alpha}\InvImg{\brk{u,v}}u$ is cartesian follows from the
+"generalized pullback lemma" for cartesian morphisms {%ref 0014 %}: it suffices
+to observe that both $\bar{p}\Sub{h}:\bar{h}\to u$ and its second factor
+$\bar{p}:\InvImg{\brk{u,v}}u\to u$ are cartesian.
