add a dotted pullback aura to a diagram

--- a/_nodes/0014.md
+++ b/_nodes/0014.md
@@ -24,7 +24,7 @@ over $f$.
       south = g,
       north = \bar{g},
     }
-    \node (x*) [left = of nw] {$\bar{x}$};
+    \node (x*) [dotted pullback, left = of nw] {$\bar{x}$};
     \node (x) [left = of sw] {$x$};
     \draw[->] (x*) to node [above] {$\bar{f}$} (nw);
     \draw[lies over] (x*) to (x);
