fix missing arrows in diagrams

--- a/_nodes/0003.md
+++ b/_nodes/0003.md
@@ -20,9 +20,9 @@ $\SelfIx{B}$ over $B$ given fiberwise by the *slices* of $B$.
     east = p\Sub{y},
     south = f,
     north = \bar{f},
-    west/style = exists,
-    east/style = exists,
-    north/style = exists,
+    west/style = {->,exists},
+    east/style = {->,exists},
+    north/style = {->,exists},
   }
 »
 
