--- a/_nodes/000H.md
+++ b/_nodes/000H.md
@@ -15,7 +15,7 @@ First we consider the restriction of $u\in \FAM{C}[I]$ to $\FAM{C}[[u,v]]$ as fo
   nw/style = pullback,
   west/style = lies over,
   east/style = lies over,
-  north/style = exists,
+  north/style = {->,exists},
   height = 1.5cm,
   nw = \InvImg{[u,v]}u,
   ne = u,
