--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -1,25 +1,26 @@
 \newcommand\BoldSymbol[1]{\boldsymbol{#1}}
+\newcommand\brc[1]{\{ #1 \}}
+\newcommand\brk[1]{[#1]}
 \newcommand\CandHom[3]{\mathbf{H}_{#1}(#2,#3)}
 \newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
 \newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
 \newcommand\FullSubfib[1]{\mathbf{Full}(#1)}
 \newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
+\newcommand\gl[1]{\langle #1 \rangle}
 \newcommand\Gl[1]{\mathsf{gl}_{#1}}
 \newcommand\Idn[1]{1_{#1}}
 \newcommand\InvImg[1]{#1^{*}}
 \newcommand\OpCat[1]{#1^{\mathsf{o}}}
-\newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
+\newcommand\OpFib[1]{#1^{\mathsf{op}}}
 \newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
-\newcommand\SET{\mathbf{Set}}
+\newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
+\newcommand\prn[1]{(#1)}
 \newcommand\SelfIx[1]{\underline{#1}}
+\newcommand\SET{\mathbf{Set}}
 \newcommand\Sh[1]{\boldsymbol{\mathcal{S}}_{#1}}
 \newcommand\Sl[2]{#1_{/#2}}
 \newcommand\Sub[1]{_{#1}}
 \newcommand\Sup[1]{^{#1}}
 \newcommand\TOP[1]{\mathbf{Top}_{#1}}
 \newcommand\TotCat[1]{\widetilde{#1}}
-\newcommand\brc[1]{\{ #1 \}}
-\newcommand\brk[1]{[#1]}
-\newcommand\gl[1]{\langle #1 \rangle}
-\newcommand\prn[1]{(#1)}
