--- a/_nodes/000Z.md
+++ b/_nodes/000Z.md
@@ -7,7 +7,7 @@ Let $C$ be a small cartesian fibration {%ref 000N%} over $B$ a category with fin
 limits, i.e. a cartesian fibration that is both locally small {%ref 000I%} and globally
 small {%ref 000P%}. We will show that $C$ is equivalent to the externalization
 {%ref 000V%} of an internal category {%ref 000O%} $\underline{C}$ in $B$,
-namely the the full internal subcategory {%ref 0011%} associated to the generic
+namely the full internal subcategory {%ref 0011%} associated to the generic
 object $\bar{u}\in C$.
 
 By {%ref 0011%} we know that the externalization of $\underline{C}$ so-defined
